--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,24 @@
 .App {
   text-align: center;
+  height: 100vh;
+  width: 100vw;
+  padding: 1em;
+  background: linear-gradient(to right, #25c481, #25b7c4);
+  overflow: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
+.Home {
+  text-align: left;
+  background: white;
+  padding: 1em;
+  margin: 1em;
+  border-radius: 8px;
+  color: #000000;
+  box-shadow: 0 4px 16px rgba(0,0,0,.12);
+  overflow: auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+h3 {
+  padding-bottom: 1em;
+  border-bottom: 1px solid #b3b3b3;
 }
