Add:   - Integrated with firebase deployment   - Thumbnail fix   - Code clean up

--- a/src/components/datatable/DataTable.scss
+++ b/src/components/datatable/DataTable.scss
@@ -51,8 +51,12 @@ td.DataTable-cell {
   color: $color-dark;
 }
 
+img.DataTable-img {
+  width: 20px;
+}
+
 #infiniteLoader {
-  height: 25px;
+  height: 20px;
   width: 100%;
   background: $grad1;
   text-align: center;
