--- a/src/components/datatable/DataTable.scss
+++ b/src/components/datatable/DataTable.scss
@@ -8,6 +8,21 @@
   overflow: auto;
 }
 
+.DataTable-searchbar {
+  & > select {
+    width: 20%;
+    height: 40px;
+  }
+  & > input[type="text"] {
+    width: 80%;
+    height: 40px;
+    border-radius: 4px;
+    border: 1px solid;
+    padding: 0.5em;
+    margin-top: -1px;
+  }
+}
+
 .DataTable-container {
   min-width: 768px;
 }
@@ -19,7 +34,7 @@ table.DataTable-table {
 }
 
 .DataTable-body {
-  height: 70vh;
+  height: 60vh;
   overflow-x: auto;
   margin-top: 0px;
   & .DataTable-row:hover {
